--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,23 @@
 plugins {
-    id 'java-library'
     id 'idea'
-    id 'com.diffplug.spotless' version '6.25.0'
+    id 'java'
+    id 'distribution'
+    id 'java-library'
+    id 'com.diffplug.spotless'
 }
 
 allprojects {
-    group = 'com.yelp.nrtsearch.plugins.ingestion'
-    version = '0.0.1'
+    group = 'com.yelp.nrtsearch.plugins'
+    version = '0.1.0-SNAPSHOT'
 
     repositories {
+        maven {
+            url = uri("https://maven-central.storage-download.googleapis.com/repos/central/data/")
+        }
+        mavenLocal()
         mavenCentral()
         maven {
-            url "https://packages.confluent.io/maven/"
+            url = uri("https://packages.confluent.io/maven/")
         }
     }
 }
@@ -20,39 +26,43 @@ subprojects {
     apply plugin: 'java-library'
     apply plugin: 'distribution'
     apply plugin: 'com.diffplug.spotless'
+    apply plugin: 'jacoco'
 
     java {
         toolchain {
             languageVersion = JavaLanguageVersion.of(21)
         }
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 
-    sourceSets {
-        main {
-            java {
-                srcDirs = ['src/main/java']
-            }
-            resources {
-                srcDirs = ['src/main/resources']
-            }
-        }
-        test {
-            java {
-                srcDirs = ['src/test/java']
-            }
-            resources {
-                srcDirs = ['src/test/resources']
-            }
-        }
+    ext {
+        nrtsearchVersion = "1.+"
     }
 
     dependencies {
-        compileOnly "com.yelp.nrtsearch:server:1.+"
-        testImplementation "com.yelp.nrtsearch:server:1.+"
-        testImplementation "com.yelp.nrtsearch:server:1.+:tests"
-        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
-        testImplementation 'org.mockito:mockito-core:5.11.0'
-        testImplementation 'org.assertj:assertj-core:3.25.3'
+        // Common dependencies for all modules
+        implementation libs.slf4j.api
+
+        // Testing dependencies
+        testImplementation libs.junit.jupiter
+        testImplementation libs.assertj.core
+        testImplementation libs.mockito.core
+        testImplementation libs.grpc.testing
+        testImplementation libs.protobuf.java
+        testImplementation(platform("org.junit:junit-bom:${libs.versions.junit.get()}"))
+
+        // NRTSearch dependencies
+        compileOnly libs.nrtsearch.server
+        testImplementation libs.nrtsearch.server
+        testImplementation("${libs.nrtsearch.server.get()}:tests")
+
+        // Additional test utilities
+        testImplementation libs.awaitility
+    }
+
+    tasks.withType(Test) {
+        useJUnitPlatform()
     }
 
     test {
@@ -64,11 +74,10 @@ subprojects {
 
     spotless {
         java {
-            importOrder()
+            googleJavaFormat()
             removeUnusedImports()
             trimTrailingWhitespace()
             endWithNewline()
-            googleJavaFormat()
         }
     }
 }
