--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,26 @@
+
 pluginManagement {
     repositories {
-        gradlePluginPortal()
         mavenCentral()
+        gradlePluginPortal()
+    }
+    plugins {
+        id("com.diffplug.spotless") version "6.25.0"
+        id("kr.motd.sphinx") version "2.10.1"
     }
 }
 
-rootProject.name = 'nrtsearch-ingestion-plugins'
+dependencyResolutionManagement {
+    repositories {
+        mavenCentral()
+        maven {
+            url = uri("https://packages.confluent.io/maven/")
+        }
+        mavenLocal()
+    }
 
-include 'kafka-plugin'
-// Uncomment when ready to implement paimon plugin
-// include 'paimon-plugin'
+}
+
+rootProject.name = "nrtsearch-ingestion-plugins"
+include("kafka-plugin")
+// include("paimon-plugin")
