feat: Add comprehensive E2E testing infrastructure and improve plugin reliability
### E2E Testing Framework
- Add complete E2E test suite with Testcontainers for Kafka + Schema Registry
- Implement KafkaIngestorE2ETest with real end-to-end validation
- Add PluginLoadingE2ETest for plugin distribution testing
- Configure Docker socket auto-discovery for Testcontainers compatibility

### Plugin Improvements
- Fix race conditions in KafkaIngestor startup/shutdown
- Enhance error handling and logging throughout plugin components
- Improve Avro to AddDocument conversion for complex nested fields

### Build System Enhancements
- Restructure test organization: unit/ vs e2e/ separation
- Add e2eTest gradle task with comprehensive Testcontainers setup
- Update dependencies for Kafka, Avro, and Testcontainers
- Configure proper test isolation and Docker environment detection

### Documentation
- Add comprehensive CLAUDE.md with setup and development guidelines

--- a/build.gradle
+++ b/build.gradle
@@ -45,12 +45,13 @@ subprojects {
         implementation libs.slf4j.api
 
         // Testing dependencies
-        testImplementation libs.junit.jupiter
+        testImplementation libs.junit
+        testRuntimeOnly libs.junit.vintage.engine
         testImplementation libs.assertj.core
         testImplementation libs.mockito.core
         testImplementation libs.grpc.testing
         testImplementation libs.protobuf.java
-        testImplementation(platform("org.junit:junit-bom:${libs.versions.junit.get()}"))
+        // JUnit 4 doesn't need BOM
 
         // NRTSearch dependencies
         compileOnly libs.nrtsearch.server
