--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ confluent = "7.5.1"
 avro = "1.11.3"
 protobuf = "3.25.3"
 grpc = "1.66.0"
-junit = "5.10.0"
+junit = "4.13.2"
 mockito = "5.14.2"
 assertj = "3.26.3"
 slf4j = "2.0.16"
@@ -13,6 +13,7 @@ sphinx = "2.10.1"
 awaitility = "4.3.0"
 testcontainers = "1.19.3"
 grpc-netty = "1.56.0"
+s3mock = "0.2.6"
 
 [libraries]
 # Kafka & Confluent
@@ -40,12 +41,14 @@ slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 
 # Testing
 awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitility" }
-junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
+junit = { module = "junit:junit", version.ref = "junit" }
+junit-vintage-engine = { module = "org.junit.vintage:junit-vintage-engine", version = "5.10.0" }
 assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+s3mock = { module = "io.findify:s3mock_2.13", version.ref = "s3mock" }
 
 # Optional: Nrtsearch (assumes published to Maven local or remote)
-nrtsearch-server = { module = "com.yelp.nrtsearch:server", version = "1.0.0-beta.14" }
+nrtsearch-server = { module = "com.yelp.nrtsearch:server", version = "1.1.0" }
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
