feat: Add Apache Paimon ingestion plugin with S3 support
Core Features:
- Dynamic Shared Queue architecture for workload skew handling
- Incremental processing with Paimon checkpoint/restore
- Ordering guarantees for same-key data within buckets
- Configurable parallelism and batching

S3 Integration:
- Universal S3A filesystem support for s3a:// warehouse paths
- Automatic credential provider selection:
  * Production: IAM roles (WebIdentityTokenCredentialsProvider)
  * Test/Local: Explicit credentials (SimpleAWSCredentialsProvider)
- Performance optimizations: connection pooling, threading, block size tuning

Architecture:
- Coordinator thread: scans for new splits, groups by bucket, distributes work
- Worker threads: process buckets sequentially maintaining ordering
- Robust error handling: poison pill protection, transient error retry
- Batch coordination: ensures all buckets complete before checkpoint commit

Configuration:
- Production S3: warehouse.path only, uses IAM roles automatically
- Filesystem: file:// paths for local development
- Comprehensive documentation with examples

Testing:
- Unit tests: S3 configuration logic validation
- E2E tests: Full plugin lifecycle with real NRTSearch server

--- a/kafka-plugin/build.gradle
+++ b/kafka-plugin/build.gradle
@@ -45,7 +45,7 @@ repositories {
 test {
     // Use JUnit Platform with Vintage Engine for JUnit 4 compatibility
     useJUnitPlatform()
-    exclude '**/*IT.class', '**/*E2E.class'
+    exclude '**/*ITTest.class', '**/*E2ETest.class'
     testLogging {
         events "passed", "skipped", "failed"
         exceptionFormat "full"
@@ -90,16 +90,6 @@ configurations {
     integrationRuntimeOnly.extendsFrom testRuntimeOnly
     e2eImplementation.extendsFrom testImplementation
     e2eRuntimeOnly.extendsFrom testRuntimeOnly
-}
-
-task integrationTest(type: Test) {
-    description = 'Runs integration tests.'
-    group = 'verification'
-    include '**/*IT.class'
-    testClassesDirs = sourceSets.integration.output.classesDirs
-    classpath = sourceSets.integration.runtimeClasspath
-    // Use JUnit Platform with Vintage Engine for JUnit 4 compatibility
-    useJUnitPlatform()
 }
 
 task e2eTest(type: Test) {
