feat: Add plugin deployment and S3 distribution system
This commit implements the complete plugin deployment pipeline to match
the nrtsearch plugin distribution system via Makefile and fixing e2eTests with S3Mock-based ZIP distribution

### Plugin Distribution System
- Add `Makefile` with environment-based deployment targets
- Add `.env.example` for configuration template and `.env` to `.gitignore`
- Implement `upload-dev` and `publish` targets for dev/prod deployment
- Support AWS role assumption for cross-account prod deployments

### Plugin Security and Metadata
- Add `plugin-security.policy` files for both kafka-plugin and paimon-plugin
- Configure Java security permissions for Kafka/Schema Registry operations
- Configure permissions for Paimon/Hadoop/S3 filesystem operations
- Update plugin-metadata.yaml files to use template variable expansion

### E2E Test Infrastructure Improvements
- Update PaimonPluginLoadingE2ETest to use S3Mock + ZIP extraction
- Update KafkaPluginLoadingE2ETest to use S3Mock + ZIP extraction

--- a/kafka-plugin/build.gradle
+++ b/kafka-plugin/build.gradle
@@ -67,6 +67,7 @@ distributions {
                         server_version: "1.+"
                 )
             }
+            from('src/main/plugin-metadata/plugin-security.policy')
         }
     }
 }
