--- a/paimon-plugin/build.gradle
+++ b/paimon-plugin/build.gradle
@@ -61,6 +61,7 @@ distributions {
                         server_version: "1.+"
                 )
             }
+            from('src/main/plugin-metadata/plugin-security.policy')
         }
     }
 }
