--- a/paimon-plugin/build.gradle
+++ b/paimon-plugin/build.gradle
@@ -14,7 +14,9 @@ dependencies {
     implementation 'org.apache.hadoop:hadoop-common:3.3.6'
     implementation 'org.apache.hadoop:hadoop-client-api:3.3.6'
     implementation 'org.apache.hadoop:hadoop-client-runtime:3.3.6'
-    implementation 'org.apache.hadoop:hadoop-aws:3.3.6'
+    implementation ('org.apache.hadoop:hadoop-aws:3.3.6') {
+        exclude group: 'com.amazonaws', module: 'aws-java-sdk-bundle'
+    }
 
     implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.768')
     // AWS SDK BOM manages versions
