--- a/paimon-plugin/build.gradle
+++ b/paimon-plugin/build.gradle
@@ -1,3 +1,12 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
+}
+
+shadowJar {
+    zip64 true
+    archiveClassifier = 'all'
+}
+
 // Plugin configurations are inherited from root project
 
 dependencies {
