--- a/paimon-plugin/build.gradle
+++ b/paimon-plugin/build.gradle
@@ -57,14 +57,8 @@ test {
 distributions {
     main {
         contents {
-            // Simple approach: plugin JAR + essential Paimon dependencies
-            from(jar)
-            from(configurations.runtimeClasspath) {
-                // Include paimon-bundle and hadoop-client
-                include 'paimon-bundle-1.4-SNAPSHOT.jar'
-                include 'hadoop-client-*.jar'
-                include 'slf4j-api-*.jar'
-            }
+            // Use the shadow JAR (self-contained with all dependencies)
+            from(shadowJar)
 
             from('src/main/plugin-metadata/plugin-metadata.yaml') {
                 expand(
