--- a/paimon-plugin/build.gradle
+++ b/paimon-plugin/build.gradle
@@ -5,6 +5,8 @@ plugins {
 shadowJar {
     zip64 true
     archiveClassifier = 'all'
+    // Merge service files instead of overwriting them
+    mergeServiceFiles()
 }
 
 // Plugin configurations are inherited from root project
@@ -16,7 +18,10 @@ dependencies {
     // Paimon core for standalone JVM
     implementation 'org.apache.paimon:paimon-bundle:1.4-SNAPSHOT'
 
-    // Hadoop client for S3A filesystem access
+    // Paimon's S3 implementation (bypasses Hadoop FileSystem discovery)
+    implementation 'org.apache.paimon:paimon-s3:1.4-SNAPSHOT'
+
+    // Hadoop client for core classes (Configuration, etc.) needed by Paimon internals
     implementation 'org.apache.hadoop:hadoop-client:3.3.4'
 
     // Logging
