--- a/paimon-plugin/build.gradle
+++ b/paimon-plugin/build.gradle
@@ -16,10 +16,10 @@ dependencies {
     implementation libs.nrtsearch.server
 
     // Paimon core for standalone JVM
-    implementation 'org.apache.paimon:paimon-bundle:1.4-SNAPSHOT'
+    implementation 'org.apache.paimon:paimon-bundle:1.2.0'
 
     // Paimon's S3 implementation (bypasses Hadoop FileSystem discovery)
-    implementation 'org.apache.paimon:paimon-s3:1.4-SNAPSHOT'
+    implementation 'org.apache.paimon:paimon-s3:1.2.0'
 
     // Hadoop client for core classes (Configuration, etc.) needed by Paimon internals
     implementation 'org.apache.hadoop:hadoop-client:3.3.4'
@@ -36,8 +36,8 @@ dependencies {
     testRuntimeOnly libs.junit.vintage.engine
 
     // Paimon test utilities
-    testImplementation('org.apache.paimon:paimon-core:1.4-SNAPSHOT:tests')
-    testImplementation('org.apache.paimon:paimon-common:1.4-SNAPSHOT:tests')
+    testImplementation('org.apache.paimon:paimon-core:1.2.0:tests')
+    testImplementation('org.apache.paimon:paimon-common:1.2.0:tests')
 
     // --- Needed for gRPC client and full NrtSearch tests ---
     testImplementation libs.grpc.netty.shaded
